fix: audio bugs, overflow word

--- a/src/minigames/savannah/scss/main.scss
+++ b/src/minigames/savannah/scss/main.scss
@@ -78,6 +78,7 @@ body {
   width: 100%;
   height: 80vh;
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -91,6 +92,7 @@ body {
   color: white;
   font-size: 3em;
   position: absolute;
+  overflow: hidden;
   top: 0;
   opacity: 0.8;
   letter-spacing: 0.15em;
